tests/ui/traits/trait-upcasting/illegal-upcast-from-impl-opaque.next.stderr
error: internal compiler error: error performing operation: query type op
  --> $DIR/illegal-upcast-from-impl-opaque.rs:25:1
   |
LL | fn illegal(x: &dyn Sub<Assoc = Foo>) -> &dyn Super<Assoc = i32> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: 
  --> $DIR/illegal-upcast-from-impl-opaque.rs:25:1
   |
LL | fn illegal(x: &dyn Sub<Assoc = Foo>) -> &dyn Super<Assoc = i32> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

query stack during panic:
end of query stack
